config-root/cluster/resources/nginx/ingress-nginx-nginx-ingress/templates/admission-webhooks/ingress-nginx-admission-valwebhookcfg.yaml
# Source: ingress-nginx/templates/admission-webhooks/validating-webhook.yaml
# before changing this value, check the required kubernetes version
# https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#prerequisites
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.13.0
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: nginx-ingress
    app.kubernetes.io/version: "1.13.0"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-webhook
    gitops.jenkins-x.io/pipeline: 'cluster'
  name: ingress-nginx-admission
  annotations:
    meta.helm.sh/release-name: 'nginx-ingress'
    meta.helm.sh/release-namespace: 'nginx'
    kapp.k14s.io/change-group: 'apps.jenkins-x.io/ingress-nginx'
webhooks:
- name: validate.nginx.ingress.kubernetes.io
  matchPolicy: Equivalent
  rules:
  - apiGroups:
    - networking.k8s.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ingresses
  failurePolicy: Fail
  sideEffects: None
  admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ingress-nginx-controller-admission
      namespace: nginx
      port: 443
      path: /networking/v1/ingresses
